--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "";
+    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbx95nbLTVup8DRJqTQUYn7u8A8gTMDOS7GgyNf0GUvYdefP9O2h43EsF9jswBu2iCILVw/exec";
 
     
     var url = document.location.href;
